==> rusefi/rusefi/firmware/config/boards/kinetis/OS/os/hal/ports/KINETIS/LLD/ADCv2/hal_adc_lld.c <==
#include "hal.h"
#include "fsl_adc12.h"
#define ADC_CHANNEL_MASK                    0x1f

void adc_lld_init(void) {

#if KINETIS_ADC_USE_ADC0
  /* Driver initialization.*/
  adcObjectInit(&ADCD1);
  /* The shared vector is initialized on driver initialization and never
     disabled.*/
  nvicEnableVector(ADC0_IRQn, KINETIS_ADC_IRQ_PRIORITY);
#endif

#if KINETIS_ADC_USE_ADC1
  /* Driver initialization.*/
  adcObjectInit(&ADCD2);
  /* The shared vector is initialized on driver initialization and never
     disabled.*/
  nvicEnableVector(ADC1_IRQn, KINETIS_ADC_IRQ_PRIORITY);
#endif

#if KINETIS_ADC_USE_ADC2
  /* Driver initialization.*/
  adcObjectInit(&ADCD3);
  /* The shared vector is initialized on driver initialization and never
     disabled.*/
  nvicEnableVector(ADC2_IRQn, KINETIS_ADC_IRQ_PRIORITY);
#endif

}

void adc_lld_start(ADCDriver *adcp) {

  /* If in stopped state then enables the ADC clock.*/
  if (adcp->state == ADC_STOP) {
#if KINETIS_ADC_USE_ADC0
    if (&ADCD1 == adcp) {
#ifndef KE1xF
      SIM->SCGC6 |= SIM_SCGC6_ADC0;
#endif /* KE1xF */
      adcp->adc = ADC0;
    }
#endif /* KINETIS_ADC_USE_ADC0 */

#if KINETIS_ADC_USE_ADC1
    if (&ADCD2 == adcp) {
#ifndef KE1xF
      SIM->SCGC6 |= SIM_SCGC6_ADC1;
#endif /* KE1xF */
      adcp->adc = ADC1;
    }
#endif /* KINETIS_ADC_USE_ADC1 */

#if KINETIS_ADC_USE_ADC2
    if (&ADCD3 == adcp) {
#ifndef KE1xF
      SIM->SCGC6 |= SIM_SCGC6_ADC2;
#endif /* KE1xF */
      adcp->adc = ADC2;
    }
#endif /* KINETIS_ADC_USE_ADC2 */
  }

#ifdef KE1xF
  adcp->channelGroup = 0;	// software-triggered
  adcp->adc12ChannelCfg.channelNumber = 0;		// we'll set it later, in adc_lld_start_conversion()
  adcp->adc12ChannelCfg.enableInterruptOnConversionCompleted = true;

  ADC12_GetDefaultConfig(&adcp->adc12Cfg);
  adcp->adc12Cfg.resolution = kADC12_Resolution12Bit;
#if 0
  // process STM32-compatible config (todo: this is just a test code for now)
  // imitate sampling speed slowdown
  if (adcp->grpp->cr1 & ADC_TwoSamplingDelay_20Cycles)
      adcp->adc12Cfg.clockDivider = kADC12_ClockDivider8;
#endif      
  ADC12_Init(adcp->adc, &adcp->adc12Cfg);
#else
  adcp->channel_mask = adcp->grpp->channel_mask;
#endif /* KE1xF */

  if (adcp->config->calibrate) {
    calibrate(adcp);
  }


}

void adc_lld_stop(ADCDriver *adcp) {

  /* If in ready state then disables the ADC clock.*/
  if (adcp->state == ADC_READY) {
#ifdef KE1xF
    ADC12_Deinit(adcp->adc);
#else
    SIM->SCGC6 &= ~SIM_SCGC6_ADC0;
    /* Disable Interrupt, Disable Channel */
    adcp->adc->SC1A = ADCx_SC1n_ADCH(ADCx_SC1n_ADCH_DISABLED);
#endif /* KE1xF */
  }
}

void adc_lld_start_conversion(ADCDriver *adcp) {
  const ADCConversionGroup *grpp = adcp->grpp;

#ifdef KE1xF
  // select first 16 channels
  int chn;
  adcp->channelIndices[0] = ADCx_SC1n_ADCH_DISABLED;
  for (chn = 0; chn < grpp->num_channels; chn++) {
    /*
    if (chn < 10 && ((grpp->smpr2 >> (chn * 3)) & 7) == 0) // ADC_SMPR1_SMP_ANx(n)
    	continue;
    if (chn >= 10 && ((grpp->smpr1 >> ((chn - 10) * 3)) & 7) == 0) // ADC_SMPR1_SMP_ANx(n)
    	continue;
    */
    if (chn < 6) {
      adcp->channelIndices[chn] = (grpp->sqr3 >> (chn * 5)) & 31;
    } else if (chn < 12) {
      adcp->channelIndices[chn] = (grpp->sqr2 >> ((chn - 6) * 5)) & 31;
    } else {
      adcp->channelIndices[chn] = (grpp->sqr1 >> ((chn - 12) * 5)) & 31;
    }
  }

  bool hw = (grpp->cr2 & ADC_CR2_SWSTART) ? false : true;

  ADC12_EnableHardwareTrigger(adcp->adc, hw); /* enable software trigger mode */

#else  
  /* Enable the Bandgap Buffer if channel mask includes BANDGAP */
  if (adcp->channel_mask & ADC_BANDGAP) {
    PMC->REGSC |= PMC_REGSC_BGBE;
  }
#endif /* KE1xF */

  adcp->number_of_samples = adcp->depth * grpp->num_channels;
  adcp->current_index = 0;

  /* Skip to the next channel */
  adcp->current_channel = 0;
#ifdef KE1xF
  adcp->adc12ChannelCfg.channelNumber = adcp->channelIndices[adcp->current_channel];
  adcp->adc12ChannelCfg.enableInterruptOnConversionCompleted = true;
  ADC12_SetChannelConfig(adcp->adc, adcp->channelGroup, &adcp->adc12ChannelCfg);
#else
  while (((1 << adcp->current_channel) & adcp->channel_mask) == 0) {
    adcp->current_channel = (adcp->current_channel + 1) & ADC_CHANNEL_MASK;
  }

  /* Set clock speed and conversion size */
  adcp->adc->CFG1 = grpp->cfg1;

  /* Set averaging */
  adcp->adc->SC3 = grpp->sc3;

  /* Enable Interrupt, Select Channel */
  adcp->adc->SC1A = ADCx_SC1n_AIEN | ADCx_SC1n_ADCH(adcp->current_channel);
#endif /* KE1xF */
}

void adc_lld_stop_conversion(ADCDriver *adcp) {
#ifndef KE1xF
  const ADCConversionGroup *grpp = adcp->grpp;
  /* Disable the Bandgap buffer if channel mask includes BANDGAP */
  if (adcp->channel_mask & ADC_BANDGAP) {
    /* Clear BGBE, ACKISO is w1c, avoid setting */
    PMC->REGSC &= ~(PMC_REGSC_BGBE | PMC_REGSC_ACKISO);
  }
#endif /* KE1xF */
}
